Add create method for users
